celanup docs, add protocal to commands cli/cmd
