# docs/swagger.json
@@ -62,13 +62,13 @@
                     {
                         "type": "string",
                         "description": "the start of the range of published dates must be specified in the form of 2006-01-02",
-                        "name": "rangeStart",
+                        "name": "publishedStart",
                         "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "the end of the range of published dates must be specified in the form of 2006-01-02",
-                        "name": "rangeEnd",
+                        "name": "publishedEnd",
                         "in": "query"
                     }
                 ],
@@ -411,10 +411,24 @@
             "type": "object",
             "properties": {
                 "result": {
-                    "$ref": "#/definitions/shared.BookCreateResponseData"
+                    "$ref": "#/definitions/shared.BookGetResponseData"
                 },
                 "type": {
                     "$ref": "#/definitions/shared.ApiResponseType"
+                }
+            }
+        },
+        "shared.BookGetResponseData": {
+            "type": "object",
+            "required": [
+                "books"
+            ],
+            "properties": {
+                "books": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/shared.ApiBook"
+                    }
                 }
             }
         },
